Adição de links no header 2

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <img src="assets/logobyf.png" alt="Logo Be your future" />
 
       <div class="links">
-        <a href="#">Início</a>
-        <a href="#">Quem Somos</a>
-        <a href="#">Produtos</a>
-        <a href="#">Blog</a>
-        <a href="#">Fale Conosco</a>
+        <a href="https://beyourfuture.com.br/">Início</a>
+        <a href="https://beyourfuture.com.br/quem-somos/">Quem Somos</a>
+        <a href="https://beyourfuture.com.br/produtos/">Produtos</a>
+        <a href="https://beyourfuture.com.br/blog/">Blog</a>
+        <a href="https://beyourfuture.com.br/blog/">Fale Conosco</a>
       </div>
       
       <div class="buttons">
